[package]
name = "counterpartydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
env_logger = "0.10.1"
[lib]
doc = false
